chore: Upgrade to Node16
- Update all workflows to use v16

--- a/.github/actions/patch-local-dependencies/action.yml
+++ b/.github/actions/patch-local-dependencies/action.yml
@@ -11,10 +11,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2
+    - name: Use Node.js 16
+      uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 16
     - run: INPUT_PATH=${{ inputs.path }} INPUT_TYPE=${{ inputs.type }} node ${{ github.action_path }}/local.mjs
       if: ${{ inputs.type == 'local' }}
       shell: bash
