--- a/.github/actions/release-package/action.yml
+++ b/.github/actions/release-package/action.yml
@@ -9,10 +9,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2
+    - name: Use Node.js 16
+      uses: actions/setup-node@v3
       with:
-        node-version: 14.x
+        node-version: 16
 
     - name: Define new version suffix
       id: vars
