--- a/.github/actions/build-package/action.yml
+++ b/.github/actions/build-package/action.yml
@@ -41,7 +41,7 @@ runs:
     - run: cd ${{ inputs.package }}
       shell: bash
 
-    - uses: cloudscape-design/.github/.github/actions/patch-local-dependencies@main
+    - uses: ./.github/.github/actions/patch-local-dependencies/action.yml
       with:
         path: ${{ github.workspace }}/${{ inputs.package }}
 
